--- a/css/aboutstyle.css
+++ b/css/aboutstyle.css
@@ -88,7 +88,7 @@ Navbar Styles
 #navbar {
   width: 100%;
   position: fixed;
-  z-index: 100;
+  z-index: 1001;
   background-color: #EBE4DD;
   top: 0;
   padding: 1% 5% 0% 5%;
@@ -122,8 +122,10 @@ li {
   background: transparent;
   border-color: transparent;
   cursor: pointer;
-
   transition: transform .5s;
+  outline: none;
+  position: relative;
+  z-index: 1002;
 }
 
 .toggle-spin {
@@ -135,27 +137,27 @@ li {
 .sidebar {
   text-align: left;
   width: 150px;
-  background-color: #ffffff;
+  height: 100vh;
+  background-color: rgba(175, 137, 118, 0.7);
   position: absolute;
-  z-index: 1001;
-  right:0;
-  top: 55px;
+  right: 0;
   transform: translate(100%);
-  transition: transform .5s;
+  transition: transform 0.5s;
 }
 
 .sidebar-links {
-  padding: 0px 40px;
+  padding: 0px 50px;
   text-align: right;
   font-size: 18px;
+  position: absolute;
+  top: 20%;
 }
-
 .sidebar-links li {
   padding: 20px 0;
 }
 
 .show-sidebar {
-    transform: translate(0%);
+  transform: translate(0%);
 }
 
 
