--- a/css/index.scss
+++ b/css/index.scss
@@ -14,6 +14,13 @@ $main-font-color: #393939;
   justify-content: $justify;
 }
 
+@mixin font-styling($family, $size, $line, $transform) {
+  font-family: $family;
+  font-size: $size;
+  line-height: $line;
+  text-transform: $transform;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -30,13 +37,6 @@ body {
   font-weight: 300;
   color: $main-font-color;
   background-color: $background-color;
-}
-
-.content {
-  font-size: 1.15em;
-  line-height: 1.5em;
-  margin: 0px 5%;
-  padding-top: 70px;
 }
 
 /* --------------
@@ -77,10 +77,8 @@ li a {
 }
 
 .button {
+  @include font-styling($font-primary, 14px, null, uppercase);
   margin: 0 auto;
-  font-family: $font-primary;
-  text-transform: uppercase;
-  font-size: 14px;
   padding: 10px 20px 8px 20px;
   border: solid 1px $main-font-color;
   color: #000000;
@@ -135,9 +133,7 @@ li {
   text-align: left;
   width: 150px;
   height: 100vh;
-  background-color: rgba(175, 137, 118, 0.6);
-  // background-color: $background-color;
-  // border-left: 1px solid $main-font-color;
+  background-color: rgba(175, 137, 118, 0.7);
   position: absolute;
   right:0;
   transform: translate(100%);
@@ -172,19 +168,16 @@ Banner Styles
 }
 
 .myname {
-  font-family: $font-primary;
+  @include font-styling($font-primary, 24px, null, uppercase);
   color: $main-font-color;
   font-weight: 400;
-  text-transform: uppercase;
   letter-spacing: 0.05em;
-  font-size: 24px;
 }
 
 .roles {
-  font-family: $font-tertiary;
+  @include font-styling($font-tertiary, 18px, null, null);
   font-weight: 300;
   font-style: italic;
-  font-size: 18px;
   margin-top: 20px;
 }
 
@@ -224,34 +217,33 @@ Banner Styles
 "Work" Container Styles
 -----------------*/
 
+.content {
+  @include font-styling(null, 1.15em, 1.5em, null);
+  margin: 0px 5%;
+  padding-top: 70px;
+}
+
 .col {
+  @include flex;
   padding: 30px;
   border-top-style: solid;
   border-width: 1px 0px;
   border-color: $main-font-color;
-  @include flex;
 }
 
 .subtitle {
-  font-size: 1.3em;
-  font-family: $font-primary;
+  @include font-styling($font-primary, 1.3em, null, uppercase);
   font-weight: 400;
-  text-transform: uppercase;
   letter-spacing: 0.03em;
 }
 
 .category {
-  font-family: $font-secondary;
-  text-transform: uppercase;
-  font-size: 18px;
-  line-height: 1.3em;
+  @include font-styling($font-secondary, 18px, 1.3em, uppercase)
 }
 
 .description {
-  font-family: $font-secondary;
+  @include font-styling($font-secondary, 16px, 1.3em, null);
   font-weight: 300;
-  font-size: 16px;
-  line-height: 1.3em;
   padding-top: 30px;
 }
 
@@ -271,11 +263,9 @@ Footer Styles
 ------------------*/
 
 .main-footer {
+  @include font-styling($font-secondary, 14px, null, uppercase);
   position: sticky;
-  font-family: $font-secondary;
   font-weight: 500;
-  text-transform: uppercase;
-  font-size: 12px;
   text-align: center;
   color: $main-font-color;
   padding-top: 20px;
@@ -296,7 +286,7 @@ Media Queries
   }
 
   .nav-links {
-    @include flex(row, space-between);
+    @include flex(row);
     margin-top: 18px;
   }
 
@@ -315,9 +305,9 @@ Media Queries
   /*---- "Work" Container--- */
 
   .container {
+    @include flex($direction:null);
     padding: 0% 2%;
     min-width: 90%;
-    @include flex($direction:null);
     flex-wrap: wrap;
   }
 
@@ -325,7 +315,7 @@ Media Queries
     flex: 1;
     flex-basis: 50%;
   }
-
+s
 
   .subtitle {
     font-size: 1em;
