--- a/css/terra.css
+++ b/css/terra.css
@@ -90,6 +90,9 @@ li {
   border-color: transparent;
   cursor: pointer;
   transition: transform .5s;
+  outline: none;
+  position: relative;
+  z-index: 1002;
 }
 
 .toggle-spin {
@@ -100,29 +103,28 @@ li {
 .sidebar {
   text-align: left;
   width: 150px;
-  background-color: #ffffff;
+  height: 100vh;
+  background-color: rgba(255, 255, 255, 0.9);
   position: absolute;
-  z-index: 1001;
-  right:0;
-  top: 55px;
+  right: 0;
   transform: translate(100%);
-  transition: transform .5s;
+  transition: transform 0.5s;
 }
 
 .sidebar-links {
-  padding: 0px 40px;
+  padding: 0px 50px;
   text-align: right;
   font-size: 18px;
+  position: absolute;
+  top: 20%;
 }
-
 .sidebar-links li {
   padding: 20px 0;
 }
 
 .show-sidebar {
-    transform: translate(0%);
+  transform: translate(0%);
 }
-
 
 /* ----------------
    Body Styles
