--- a/css/terra.css
+++ b/css/terra.css
@@ -323,6 +323,7 @@ Media Queries
     display: flex;
     flex-direction: row;
     margin: 0 auto;
+    justify-content: space-around;
   }
 
   .wireframe {
